[gd_scene load_steps=14 format=3 uid="uid://c5201ywqdetwk"]

[ext_resource type="Script" uid="uid://dmmffnha3kdrt" path="res://scenes/chica.gd" id="1_8f32t"]
[ext_resource type="Shader" uid="uid://8ecfbgdsl7km" path="res://scenes/eyes.gdshader" id="2_lwcnh"]
[ext_resource type="Texture2D" uid="uid://dbo62wy3wql6d" path="res://assets/camera/cam1chica.png" id="3_3bcvw"]
[ext_resource type="Texture2D" uid="uid://ctpu0xidc5eja" path="res://assets/camera/load/load4.png" id="4_cjha8"]
[ext_resource type="Texture2D" uid="uid://draedu2j8qb10" path="res://assets/camera/cam10chica.png" id="4_jhte6"]
[ext_resource type="Texture2D" uid="uid://dmkvlsdak4qeu" path="res://assets/camera/cam3chica.png" id="6_m0gms"]
[ext_resource type="Texture2D" uid="uid://yl6epj1tgrkl" path="res://assets/camera/cam4chica.png" id="7_5tukh"]
[ext_resource type="Texture2D" uid="uid://d1hjc34aqqv3p" path="res://assets/camera/cam6chica.png" id="8_uppsi"]
[ext_resource type="Texture2D" uid="uid://bo6q52ejqln61" path="res://assets/camera/cam8chica.png" id="9_t5ty1"]
[ext_resource type="Script" uid="uid://dl5fgio2ul8pn" path="res://scenes/mixed_bag.gd" id="10_26wpi"]
[ext_resource type="AudioStream" uid="uid://dtepm6dscwee8" path="res://assets/sounds/chica/retro/0.wav" id="11_2jv8j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f020u"]
shader = ExtResource("2_lwcnh")
shader_parameter/scroll = 0.0
shader_parameter/colour = Vector4(1, 1, 1, 1)
shader_parameter/displacement_scale = 2.0

[sub_resource type="SpriteFrames" id="SpriteFrames_1fgk8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3bcvw")
}],
"loop": false,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_jhte6")
}],
"loop": false,
"name": &"10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cjha8")
}],
"loop": true,
"name": &"11",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cjha8")
}],
"loop": false,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cjha8")
}],
"loop": false,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_m0gms")
}],
"loop": false,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_5tukh")
}],
"loop": false,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_uppsi")
}],
"loop": false,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cjha8")
}],
"loop": false,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cjha8")
}],
"loop": false,
"name": &"8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_t5ty1")
}],
"loop": false,
"name": &"9",
"speed": 5.0
}]

[node name="Chica" type="Node2D" node_paths=PackedStringArray("Sprites")]
script = ExtResource("1_8f32t")
Sprites = NodePath("Sprites")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_f020u")
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_1fgk8")
animation = &"1"
centered = false
offset = Vector2(-48, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="MixedBag" type="Node" parent="."]
script = ExtResource("10_26wpi")
Size = 25
RefillWhenEmpty = true

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_2jv8j")
volume_db = -5.0

[node name="LowLureBag" type="Node" parent="."]
script = ExtResource("10_26wpi")
Size = 2
InitialBag = [true, false]
RefillWhenEmpty = true

[node name="MainHallFailBag" type="Node" parent="."]
script = ExtResource("10_26wpi")
Size = 4
InitialBag = [1, 4, 5, 6]
RefillWhenEmpty = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
